--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="resume-container">
         <div class="shadow-1-strong bg-white my-5" id="intro">
           <div class="bg-info text-white">
-            <div class="cover bg-image"><img src="images/header-background.jpg" />
+            <div class="cover bg-image"><img src="images/pink.jpg" />
               <div class="mask" style="background-color: rgba(222, 151, 198, 0.7);backdrop-filter: blur(2px);">
                 <div class="text-center p-5">
                   <div class="avatar p-1"><img class="img-thumbnail shadow-2-strong" src="images/ava.jpg" width="260" height="260" />
